# logging_demo

./: CMakeLists.txt  logging-demo.asd  package.xml
src/: foo.lisp  package.lisp
