<package format="2">
  <name>logging_demo</name>
  <version>0.0.0</version>
  <description>oi</description>
  <author>Gayane Kazhoyan</author>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>spatial_relations_costmap</depend>
  <depend>cram_transforms_stamped</depend>
  <depend>cram_designators</depend>
  <depend>cram_location_costmap</depend>
  <depend>semantic_map_costmap</depend>
  <depend>cram_robot_pose_gaussian_costmap</depend>
  <depend>cram_bullet_reasoning</depend>
  <depend>cram_pr2_description</depend>
  <depend>cram_bullet_reasoning_belief_state</depend>
  <depend>cram_pr2_synch_projection_pms</depend>
  <depend>occupancy_grid_costmap</depend>
  <depend>cram_plan_library</depend>
  <depend>cram_bullet_reasoning_designators</depend>
  <depend>cram_pr2_designators</depend>
  <depend>cram_semantic_map_designators</depend>
  <depend>alexandria</depend>
  <depend>bullet_reasoning_utilities</depend>
</package>
